
*****

Fixed typo in pip-install command in the docs.

*****

Bumped bibmanager version to 1.2.0.
New release (exclamation mark).


*****  Mi 12. Feb 18:11:31 CET 2020  *****

Added check for requests before getting json from response.
Untested, only for debugging purposes.
Set version to 1.2.1.dev0

*****

Modified am.add_bibtex() function to request no more than 2000
entries at a time.
Replaced print statements of failed requests with ValueError
exceptions raises.
Updated test of failing request accordingly.

*****

Modified cli_cleanup(), cli_ads_add(), and cli_ads_update()
to capture the am.add_bibtex() exceptions and print nicely to the
screen output.
Added test for failing cli_ads_add() case.

*****

Fixed email and link to ADS blog article in docs.

*****

Bumped bibmanager version to 1.2.1.
This commit fixes a bug when requesting more than 2000 bibcode
entries at once from ADS (thanks to bug report from Brice-Olivier
Demory).


*****  So 16. Feb 16:00:33 CET 2020  *****

Cleaned up exceptions in the am.search() function
in a similar fashion as the exceptions in am.add_bibtex().

*****

Updated testing for failing ADS searches.

*****

Catch exceptions in cli_ads_search() calls to print out nicely
to the user.

*****

Minor bug fix in test_cli_ads_search() and test_cli_ads_search_next()
tests to prevent modifying the user's config file.

*****

Bumped bibmanager version to 1.2.2.


*****  Mi 19. Feb 16:24:09 CET 2020  *****

Added AtroBetter entry in Featured Articles section in docs.


*****  Mi 4. Mär 17:40:11 CET 2020  *****

Modified lm.build_bib() to remove everything before \begin{document}.


*****  Thu Apr  2 00:18:27 CEST 2020  *****

Implemented lm.parse_subtex_files() to parse subtex files
included in main tex text (recursively).  It currently captures
input, include, and subfile calls.  It does not look for import
calls.
Documented and tested.


*****  Fri Apr 3 20:03:12 CEST 2020  *****

Bumped bibmanager version to 1.2.3.
