@@ -1941,3 +1941,11 @@ Documented and tested.
 
 Bumped bibmanager version to 1.2.3.
 
+
+*****  Sun May 31 14:58:05 CEST 2020  *****
+
+Changed the pickle protocol from pickle.HIGHEST_PROTOCOL to 4
+to allow for compatibility between Python 3.6/3.7 and later versions
+(which have higer pickle.HIGHEST_PROTOCOL).
+
+
